--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>קטלוג בשמי בוטיק</title>
-  <meta name="description" content="בשמים בייצור פרטי • הזמנה ושאלות ב‑WhatsApp" />
+  <meta name="description" content="בשמים בייצור פרטי • הזמנה ושאלות ב-WhatsApp" />
   <!-- Open Graph (for pretty sharing) -->
   <meta property="og:title" content="קטלוג בשמי בוטיק" />
   <meta property="og:description" content="בשמים בייצור פרטי • קנייה דרך WhatsApp" />
@@ -41,7 +41,7 @@
   <header class="wrap">
     <h1>קטלוג בשמי בוטיק</h1>
     <p>ייצור פרטי בכמויות קטנות. בחירה, שאלות והזמנה דרך WhatsApp.</p>
-    <a class="cta" id="waTop" target="_blank" rel="noopener">דברו איתי ב‑WhatsApp</a>
+    <a class="cta" id="waTop" target="_blank" rel="noopener">דברו איתי ב-WhatsApp</a>
   </header>
 
   <main class="wrap">
@@ -59,18 +59,18 @@
       <!-- מוצר 1 -->
       <article class="card" itemscope itemtype="https://schema.org/Product"
                data-name="Amber No.1" data-sku="AMB1" data-price="180" data-volume="50ml">
-        <img src="images/p1.jpg" alt="Amber No.1" loading="lazy" />
+        <img src="images/1.jpg" alt="Amber No.1" loading="lazy" />
         <h3 itemprop="name">Amber No.1</h3>
         <p class="meta">ניחוח אמברי חמים • <span itemprop="size">50ml EDP</span></p>
         <p class="price"><span itemprop="offers" itemscope itemtype="https://schema.org/Offer">₪<span itemprop="price" content="180">180</span></span></p>
-        <a class="wa-btn" target="_blank" rel="noopener">הזמנה/שאלה ב‑WhatsApp</a>
+        <a class="wa-btn" target="_blank" rel="noopener">הזמנה/שאלה ב-WhatsApp</a>
         <script type="application/ld+json">
         {
           "@context":"https://schema.org",
           "@type":"Product",
           "name":"Amber No.1",
           "description":"ניחוח אמברי חמים • 50ml EDP",
-          "image":"images/p1.jpg",
+          "image":"images/1.jpg",
           "sku":"AMB1",
           "offers":{"@type":"Offer","priceCurrency":"ILS","price":"180","availability":"https://schema.org/InStock"}
         }
@@ -80,18 +80,18 @@
       <!-- מוצר 2 -->
       <article class="card" itemscope itemtype="https://schema.org/Product"
                data-name="Citrus Breeze" data-sku="CTR2" data-price="170" data-volume="50ml">
-        <img src="images/p2.jpg" alt="Citrus Breeze" loading="lazy" />
+        <img src="images/2.jpg" alt="Citrus Breeze" loading="lazy" />
         <h3 itemprop="name">Citrus Breeze</h3>
         <p class="meta">הדרי-רענן • <span itemprop="size">50ml EDP</span></p>
         <p class="price"><span itemprop="offers" itemscope itemtype="https://schema.org/Offer">₪<span itemprop="price" content="170">170</span></span></p>
-        <a class="wa-btn" target="_blank" rel="noopener">הזמנה/שאלה ב‑WhatsApp</a>
+        <a class="wa-btn" target="_blank" rel="noopener">הזמנה/שאלה ב-WhatsApp</a>
         <script type="application/ld+json">
         {
           "@context":"https://schema.org",
           "@type":"Product",
           "name":"Citrus Breeze",
           "description":"הדרי-רענן • 50ml EDP",
-          "image":"images/p2.jpg",
+          "image":"images/2.jpg",
           "sku":"CTR2",
           "offers":{"@type":"Offer","priceCurrency":"ILS","price":"170","availability":"https://schema.org/InStock"}
         }
@@ -101,18 +101,18 @@
       <!-- מוצר 3 -->
       <article class="card" itemscope itemtype="https://schema.org/Product"
                data-name="Woody Trail" data-sku="WD3" data-price="190" data-volume="50ml">
-        <img src="images/p3.jpg" alt="Woody Trail" loading="lazy" />
+        <img src="images/3.jpg" alt="Woody Trail" loading="lazy" />
         <h3 itemprop="name">Woody Trail</h3>
         <p class="meta">וודי-עצי • <span itemprop="size">50ml EDP</span></p>
         <p class="price"><span itemprop="offers" itemscope itemtype="https://schema.org/Offer">₪<span itemprop="price" content="190">190</span></span></p>
-        <a class="wa-btn" target="_blank" rel="noopener">הזמנה/שאלה ב‑WhatsApp</a>
+        <a class="wa-btn" target="_blank" rel="noopener">הזמנה/שאלה ב-WhatsApp</a>
         <script type="application/ld+json">
         {
           "@context":"https://schema.org",
           "@type":"Product",
           "name":"Woody Trail",
           "description":"וודי-עצי • 50ml EDP",
-          "image":"images/p3.jpg",
+          "image":"images/3.jpg",
           "sku":"WD3",
           "offers":{"@type":"Offer","priceCurrency":"ILS","price":"190","availability":"https://schema.org/InStock"}
         }
@@ -127,7 +127,7 @@
       <h2>שאלות נפוצות</h2>
       <details>
         <summary>איך מבצעים הזמנה?</summary>
-        <div>לוחצים על כפתור ה‑WhatsApp בכרטיס המוצר, ממלאים את ההודעה האוטומטית ושולחים. נחזור אליכם לתיאום תשלום ומשלוח.</div>
+        <div>לוחצים על כפתור ה-WhatsApp בכרטיס המוצר, ממלאים את ההודעה האוטומטית ושולחים. נחזור אליכם לתיאום תשלום ומשלוח.</div>
       </details>
       <details>
         <summary>משלוחים וזמני הכנה</summary>
@@ -146,11 +146,11 @@
   </main>
 
   <footer class="wrap">
-    <div>© 2025 שם המותג • הזמנה דרך WhatsApp בלבד • פרטי קשר: example@mail.com • 050‑0000000</div>
+    <div>© 2025 שם המותג • הזמנה דרך WhatsApp בלבד • פרטי קשר: example@mail.com • 050-0000000</div>
   </footer>
 
   <script>
-    // ⚙️ הגדר כאן את מספר ה‑WhatsApp שלך (בפורמט בינלאומי, ללא +):
+    // ⚙️ הגדר כאן את מספר ה-WhatsApp שלך (בפורמט בינלאומי, ללא +):
     const WA_PHONE = "972509222727"; // לדוגמה: 9725XXXXXXXX
 
     // יוצר קישור וואטסאפ אוטומטי מכל כרטיס מוצר על בסיס data-attributes
