--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>קטלוג בשמי בוטיק</title>
   <meta name="description" content="בשמים בייצור פרטי • הזמנה ושאלות ב-WhatsApp" />
-  <!-- Fonts (עברית אלגנטית) -->
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&family=Noto+Serif+Hebrew:wght@600;700&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;600;800&family=Noto+Serif+Hebrew:wght@600;700&display=swap" rel="stylesheet">
   <!-- Open Graph -->
   <meta property="og:title" content="קטלוג בשמי בוטיק" />
   <meta property="og:description" content="בשמים בייצור פרטי • קנייה דרך WhatsApp" />
@@ -15,19 +15,17 @@
   <link rel="icon" href="images/favicon.ico" />
   <style>
     :root{
-      /* ↔ שנה כאן את גודל הלוגו (למשל 120px / 160px / 200px) */
-      --logo-h: 300px;
-      /* פלטת צבעים בוטיקית */
-      --bg: #fbf8f3;      /* רקע חמים */
+      --logo-h: 160px;            /* ↔ שינוי גובה לוגו */
+      --bg: #fbf8f3;
       --card: #ffffff;
       --fg: #1a1a1a;
       --muted:#6f6a5f;
-      --accent:#b07a2a;   /* ענברי זהוב */
+      --accent:#b07a2a;
       --border:#eadfce;
       --shadow: 0 6px 18px rgba(50,24,0,.06);
     }
     *{box-sizing:border-box}
-    html,body{margin:0; padding:0}
+    html,body{margin:0;padding:0}
     body{
       background:
         radial-gradient(1200px 600px at 10% -10%, #fff 0, rgba(255,255,255,.6) 40%, transparent 70%),
@@ -37,65 +35,49 @@
       -webkit-font-smoothing: antialiased;
       scroll-behavior:smooth;
     }
-    a{color:inherit; text-decoration:none}
-    .wrap{max-width:1160px; margin:0 auto; padding:0 16px 56px}
-    header{
-      text-align:center; padding:32px 16px 8px;
-    }
-    .logo{
-      display:block; margin:0 auto 12px;
-      height:var(--logo-h); max-width:90%; object-fit:contain;
-    }
-    header h1{
-      font-family:"Noto Serif Hebrew", serif;
-      font-weight:700; font-size:clamp(26px,3.5vw,40px); margin:0 0 8px;
-    }
-    header p{margin:6px 0; color:var(--muted)}
+    a{color:inherit;text-decoration:none}
+    .wrap{max-width:1160px;margin:0 auto;padding:0 16px 56px}
+    header{text-align:center;padding:32px 16px 8px}
+    .logo{display:block;margin:0 auto 12px;height:var(--logo-h);max-width:90%;object-fit:contain}
+    header h1{font-family:"Noto Serif Hebrew",serif;font-weight:700;font-size:clamp(26px,3.5vw,40px);margin:0 0 8px}
+    header p{margin:6px 0;color:var(--muted)}
     .cta{
-      display:inline-block; margin-top:12px; padding:12px 18px;
-      border:1px solid var(--accent); border-radius:14px; font-weight:700;
-      background:linear-gradient(#fff, #fff9f0);
-      transition:.2s transform,.2s box-shadow,.2s background;
-      box-shadow: var(--shadow);
+      display:inline-block;margin-top:12px;padding:12px 18px;border:1px solid var(--accent);border-radius:14px;font-weight:800;
+      background:linear-gradient(#fff,#fff9f0);transition:.2s transform,.2s box-shadow,.2s background;box-shadow:var(--shadow)
     }
-    .cta:hover{transform:translateY(-2px); box-shadow:0 10px 20px rgba(176,122,42,.12)}
-    .grid{
-      display:grid; gap:18px;
-      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    .cta:hover{transform:translateY(-2px);box-shadow:0 10px 20px rgba(176,122,42,.12)}
+    .grid{display:grid;gap:18px;grid-template-columns:repeat(auto-fit,minmax(250px,1fr))}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:12px;display:flex;flex-direction:column;box-shadow:var(--shadow);transition:.2s transform,.2s box-shadow}
+    .card:hover{transform:translateY(-3px);box-shadow:0 12px 24px rgba(32,18,0,.08)}
+    /* Carousel */
+    .carousel{position:relative;border-radius:12px;overflow:hidden;background:#f1f1f1}
+    .slides{position:relative;height:280px}
+    .slide{position:absolute;inset:0;opacity:0;transition:opacity .25s}
+    .slide.active{opacity:1}
+    .slide img{width:100%;height:100%;object-fit:cover;display:block}
+    .nav{position:absolute;top:50%;transform:translateY(-50%);display:flex;gap:8px;width:100%;justify-content:space-between;padding:0 8px;pointer-events:none}
+    .nav button{pointer-events:auto;width:36px;height:36px;border-radius:999px;border:1px solid var(--border);background:#fff9f0;font-weight:800}
+    .dots{display:flex;gap:6px;justify-content:center;padding:6px}
+    .dot{width:8px;height:8px;border-radius:999px;background:#ddd}
+    .dot.active{background:var(--accent)}
+    .card h3{margin:10px 0 4px;font-size:18px;font-weight:800;letter-spacing:.2px;font-family:"Noto Serif Hebrew",serif}
+    .meta{color:var(--muted);font-size:14px}
+    .price{font-weight:800;margin:6px 0 0}
+    .sizes{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
+    .size-btn{
+      padding:8px 10px;border:1px solid var(--border);border-radius:10px;background:#fff;font-weight:700;font-size:14px
     }
-    .card{
-      background:var(--card); border:1px solid var(--border); border-radius:16px;
-      padding:12px; display:flex; flex-direction:column; box-shadow:var(--shadow);
-      transition:.2s transform,.2s box-shadow;
-    }
-    .card:hover{transform:translateY(-3px); box-shadow:0 12px 24px rgba(32,18,0,.08)}
-    .card img{
-      width:100%; height:280px; border-radius:12px; object-fit:cover; background:#f1f1f1;
-    }
-    .card h3{
-      margin:10px 0 4px; font-size:18px; font-weight:700; letter-spacing:.2px;
-      font-family:"Noto Serif Hebrew", serif;
-    }
-    .meta{color:var(--muted); font-size:14px}
-    .price{font-weight:800; margin:6px 0 0}
-    .wa-btn{
-      margin-top:auto; display:inline-block; padding:10px 14px; border-radius:12px;
-      border:1px solid var(--accent); background:#fff; font-weight:700;
-      transition:.2s background,.2s transform,.2s box-shadow;
-    }
-    .wa-btn:hover{background:#fff6ea; transform:translateY(-1px)}
-    footer{
-      color:var(--muted); font-size:14px; border-top:1px solid var(--border);
-      padding:24px 16px 40px; text-align:center;
-    }
+    .size-btn.active{border-color:var(--accent);background:#fff6ea}
+    .wa-btn{margin-top:auto;display:inline-block;padding:10px 14px;border-radius:12px;border:1px solid var(--accent);background:#fff;font-weight:800;transition:.2s background,.2s transform,.2s box-shadow}
+    .wa-btn:hover{background:#fff3e0;transform:translateY(-1px)}
+    footer{color:var(--muted);font-size:14px;border-top:1px solid var(--border);padding:24px 16px 40px;text-align:center}
     .faq{margin-top:34px}
-    .faq h2{font-family:"Noto Serif Hebrew", serif; font-size:20px; margin:0 0 8px}
-    .faq details{border:1px solid var(--border); border-radius:12px; padding:10px 12px; margin:8px 0; background:#fff; box-shadow:var(--shadow)}
+    .faq h2{font-family:"Noto Serif Hebrew",serif;font-size:20px;margin:0 0 8px}
+    .faq details{border:1px solid var(--border);border-radius:12px;padding:10px 12px;margin:8px 0;background:#fff;box-shadow:var(--shadow)}
   </style>
 </head>
 <body>
   <header class="wrap">
-    <!-- לוגו – יופיע אם קיים images/logo.png -->
     <img src="images/logo.png" alt="לוגו המותג" class="logo" onerror="this.style.display='none'">
     <h1>קטלוג בשמי בוטיק</h1>
     <p>ייצור פרטי בכמויות קטנות. בחירה, שאלות והזמנה דרך WhatsApp.</p>
@@ -103,14 +85,13 @@
   </header>
 
   <main class="wrap">
-    <section class="grid" id="products"><!-- ימולא אוטומטית ע"י JS --></section>
+    <section class="grid" id="products"></section>
 
     <section class="faq">
       <h2>שאלות נפוצות</h2>
-      <details><summary>איך מבצעים הזמנה?</summary><div>לוחצים על כפתור ה-WhatsApp בכרטיס המוצר, ההודעה תתמלא אוטומטית ושולחים. נחזור אליכם לתיאום תשלום ומשלוח.</div></details>
+      <details><summary>איך מבצעים הזמנה?</summary><div>בוחרים נפח (100ml / 10ml Refillable / 5ml Sample), לוחצים על כפתור ה-WhatsApp בכרטיס, ההודעה תתמלא אוטומטית ושולחים.</div></details>
+      <details><summary>דוגמיות 5ml ו-10ml</summary><div>5ml — טעימה נוחה; 10ml — מיכל מילוי-מחדש (Refillable) לשימוש יומיומי.</div></details>
       <details><summary>משלוחים וזמני הכנה</summary><div>נשלח בד״כ תוך 1–3 ימי עסקים מרגע האישור. איסוף מתואם אפשרי.</div></details>
-      <details><summary>החלפות/החזרות</summary><div>לפי החוק ובהתאם למדיניות המותג (מוצרים סגורים/אטומים בלבד).</div></details>
-      <details><summary>רגישויות לעור</summary><div>מומלץ לבצע בדיקת רגישות נקודתית. להפסיק שימוש במקרה של גירוי.</div></details>
     </section>
   </main>
 
@@ -119,67 +100,41 @@
   </footer>
 
   <script>
-    // ⚙️ מספר ה-WhatsApp שלך (בפורמט בינלאומי, ללא +):
+    // מספר ה-WhatsApp שלך (בפורמט בינלאומי, ללא +):
     const WA_PHONE = "972508939729";
 
-    // פלייסהולדר לתמונה חסרה (SVG בהיר)
-    const PLACEHOLDER = 'data:image/svg+xml;utf8,'
-      + encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" width="800" height="600">'
-      + '<rect width="100%" height="100%" fill="#f1f1f1"/>'
-      + '<text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle"'
-      + ' font-family="sans-serif" font-size="22" fill="#999">אין תמונה</text></svg>');
+    // 🖼 אם תרצה הוספת תמונות לקרוסלה:
+    // פשוט העלה גם images/1-2.jpg , images/1-3.jpg (וכן הלאה לכל מוצר).
+    // הקוד ינסה להציג אותן; אם לא קיימות—הקרוסלה תישאר עם התמונה הראשונה בלבד.
 
-    // רשימת מוצרים — הוצמדו 1:1 לקבצים images/1.jpg … images/41.jpg
-    const products = [
-      {name:"Amber No.1",        sku:"P01", img:"1.jpg",  note:"אמברי חמים", price:180, vol:"50ml"},
-      {name:"Citrus Breeze",     sku:"P02", img:"2.jpg",  note:"הדרי רענן",  price:180, vol:"50ml"},
-      {name:"Woody Trail",       sku:"P03", img:"3.jpg",  note:"וודי עצי",   price:180, vol:"50ml"},
-      {name:"Musk Velvet",       sku:"P04", img:"4.jpg",  note:"מאסק קטיפתי",price:180, vol:"50ml"},
-      {name:"Ocean Mist",        sku:"P05", img:"5.jpg",  note:"ימי רענן",   price:180, vol:"50ml"},
-      {name:"Spice Route",       sku:"P06", img:"6.jpg",  note:"תבליני חם",  price:180, vol:"50ml"},
-      {name:"Rose Garden",       sku:"P07", img:"7.jpg",  note:"ורדים עדין", price:180, vol:"50ml"},
-      {name:"Vanilla Beam",      sku:"P08", img:"8.jpg",  note:"וניל עדין",  price:180, vol:"50ml"},
-      {name:"Night Oud",         sku:"P09", img:"9.jpg",  note:"אוד עמוק",   price:180, vol:"50ml"},
-      {name:"Fresh Linen",       sku:"P10", img:"10.jpg", note:"נקי ורענן",  price:180, vol:"50ml"},
-      {name:"Golden Sandal",     sku:"P11", img:"11.jpg", note:"סנדלווד מוזהב",price:180, vol:"50ml"},
-      {name:"Bergamot Leaf",     sku:"P12", img:"12.jpg", note:"ברגמוט רענן",price:180, vol:"50ml"},
-      {name:"Cedar Grove",       sku:"P13", img:"13.jpg", note:"ארז יבש",    price:180, vol:"50ml"},
-      {name:"Patchouli Noir",    sku:"P14", img:"14.jpg", note:"פצ'ולי כהה", price:180, vol:"50ml"},
-      {name:"Leather Smoke",     sku:"P15", img:"15.jpg", note:"עור מעושן",  price:180, vol:"50ml"},
-      {name:"Lavender Hill",     sku:"P16", img:"16.jpg", note:"לבנדר מרגיע",price:180, vol:"50ml"},
-      {name:"Fig Blossom",       sku:"P17", img:"17.jpg", note:"תאנה פרחונית",price:180, vol:"50ml"},
-      {name:"Neroli Sun",        sku:"P18", img:"18.jpg", note:"נרולי שמשי", price:180, vol:"50ml"},
-      {name:"White Tea",         sku:"P19", img:"19.jpg", note:"תה לבן",     price:180, vol:"50ml"},
-      {name:"Ambergris Tide",    sku:"P20", img:"20.jpg", note:"אמברגריס ימי",price:180, vol:"50ml"},
-      {name:"Tonka Drift",       sku:"P21", img:"21.jpg", note:"טונקה ונילי",price:180, vol:"50ml"},
-      {name:"Forest Rain",       sku:"P22", img:"22.jpg", note:"גשם יער",    price:180, vol:"50ml"},
-      {name:"Saffron Ember",     sku:"P23", img:"23.jpg", note:"זעפרן חמים", price:180, vol:"50ml"},
-      {name:"Blackcurrant Muse", sku:"P24", img:"24.jpg", note:"פרותי שחור", price:180, vol:"50ml"},
-      {name:"Ginger Spark",      sku:"P25", img:"25.jpg", note:"ג'ינג'ר חריף",price:180, vol:"50ml"},
-      {name:"Tuberose Cloud",    sku:"P26", img:"26.jpg", note:"טוברוז",     price:180, vol:"50ml"},
-      {name:"Sacred Myrrh",      sku:"P27", img:"27.jpg", note:"מור עשיר",   price:180, vol:"50ml"},
-      {name:"Pine Needle",       sku:"P28", img:"28.jpg", note:"אורן ירוק",  price:180, vol:"50ml"},
-      {name:"Pear Shade",        sku:"P29", img:"29.jpg", note:"אגס עדין",   price:180, vol:"50ml"},
-      {name:"Orchid Veil",       sku:"P30", img:"30.jpg", note:"סחלב עדין",  price:180, vol:"50ml"},
-      {name:"Cocoa Wood",        sku:"P31", img:"31.jpg", note:"קקאו ועץ",   price:180, vol:"50ml"},
-      {name:"Jasmine Air",       sku:"P32", img:"32.jpg", note:"יסמין קליל", price:180, vol:"50ml"},
-      {name:"Basil Citrus",      sku:"P33", img:"33.jpg", note:"בזיליקום הדרי",price:180, vol:"50ml"},
-      {name:"Honey Amber",       sku:"P34", img:"34.jpg", note:"דבש-ענברי",  price:180, vol:"50ml"},
-      {name:"Blue Vetiver",      sku:"P35", img:"35.jpg", note:"ותיבר כחול", price:180, vol:"50ml"},
-      {name:"Maple Cedar",       sku:"P36", img:"36.jpg", note:"מייפל וארז", price:180, vol:"50ml"},
-      {name:"Arctic Mint",       sku:"P37", img:"37.jpg", note:"נענע ארקטית",price:180, vol:"50ml"},
-      {name:"Ruby Rose",         sku:"P38", img:"38.jpg", note:"ורד רובי",   price:180, vol:"50ml"},
-      {name:"Smoke & Salt",      sku:"P39", img:"39.jpg", note:"מעושן-מלוח", price:180, vol:"50ml"},
-      {name:"Cashmere Musk",     sku:"P40", img:"40.jpg", note:"מאסק קשמיר", price:180, vol:"50ml"},
-      {name:"Desert Bloom",      sku:"P41", img:"41.jpg", note:"פריחת מדבר", price:180, vol:"50ml"}
-    ];
+    // רשימת מוצרים (41), תמונה ראשית: images/N.jpg, שמות לדוגמה, מחירים לדוגמה
+    // 100ml = מחיר מלא; 10ml ו-5ml = דוגמיות/מילוי-מחדש
+    const products = Array.from({length: 41}, (_, i) => {
+      const n = i + 1;
+      const names = [
+        "Amber No.1","Citrus Breeze","Woody Trail","Musk Velvet","Ocean Mist","Spice Route","Rose Garden","Vanilla Beam","Night Oud","Fresh Linen",
+        "Golden Sandal","Bergamot Leaf","Cedar Grove","Patchouli Noir","Leather Smoke","Lavender Hill","Fig Blossom","Neroli Sun","White Tea","Ambergris Tide",
+        "Tonka Drift","Forest Rain","Saffron Ember","Blackcurrant Muse","Ginger Spark","Tuberose Cloud","Sacred Myrrh","Pine Needle","Pear Shade","Orchid Veil",
+        "Cocoa Wood","Jasmine Air","Basil Citrus","Honey Amber","Blue Vetiver","Maple Cedar","Arctic Mint","Ruby Rose","Smoke & Salt","Cashmere Musk","Desert Bloom"
+      ];
+      return {
+        id: n,
+        name: names[i] || `Perfume ${n}`,
+        sku: `P${String(n).padStart(2,'0')}`,
+        price100: 180,   // מחיר מלא לדוגמה
+        price10: 45,     // Y לדוגמה (Refillable 10ml)
+        price5: 25,      // X לדוגמה (Sample 5ml)
+        images: [`${n}.jpg`, `${n}-2.jpg`, `${n}-3.jpg`], // קיימת בוודאות רק הראשונה
+        note: "EDP"
+      };
+    });
 
-    function buildWaText({name, sku, price, vol}) {
+    function buildWaHref(p, sizeLabel, price) {
       const lines = [
         "היי! מעוניין/ת בבושם:",
-        `${name} (קוד: ${sku})`,
+        `${p.name} (קוד: ${p.sku})`,
+        `נפח: ${sizeLabel}`,
         price ? `מחיר מוצג: ₪${price}` : null,
-        vol ? `נפח: ${vol}` : null,
         "אשמח לפרטים/הזמנה."
       ].filter(Boolean).join("\n");
       return `https://wa.me/${WA_PHONE}?text=${encodeURIComponent(lines)}`;
@@ -187,32 +142,21 @@
 
     function renderProducts() {
       const container = document.getElementById('products');
+
       container.innerHTML = products.map(p => {
-        const meta = `${p.note ? p.note + " • " : ""}${p.vol || ""} EDP`;
-        const wa = buildWaText({name:p.name, sku:p.sku, price:p.price, vol:p.vol});
-        return `
-          <article class="card" itemscope itemtype="https://schema.org/Product"
-                   data-name="${p.name}" data-sku="${p.sku}" data-price="${p.price}" data-volume="${p.vol}">
-            <img src="images/${p.img}" alt="${p.name}" loading="lazy"
-                 onerror="this.onerror=null; this.src='${PLACEHOLDER}'" />
-            <h3 itemprop="name">${p.name}</h3>
-            <p class="meta">${meta}</p>
-            <p class="price">₪<span itemprop="price" content="${p.price}">${p.price}</span></p>
-            <a class="wa-btn" href="${wa}" target="_blank" rel="noopener">הזמנה/שאלה ב-WhatsApp</a>
-          </article>
-        `;
-      }).join('');
-    }
+        // ברירת מחדל: 100ml
+        const sizeLabel = "100ml";
+        const price = p.price100;
 
-    function initWhatsAppTop(){
-      const waTop = document.getElementById('waTop');
-      if (waTop) waTop.href = `https://wa.me/${WA_PHONE}?text=${encodeURIComponent('היי! מעוניין/ת בבשמים.')}`;
-    }
+        const slides = p.images.map((file, idx) => `
+          <div class="slide ${idx===0 ? 'active' : ''}">
+            <img src="images/${file}" alt="${p.name}" onerror="this.parentElement.remove()">
+          </div>
+        ").join("");`
 
-    document.addEventListener('DOMContentLoaded', () => {
-      renderProducts();
-      initWhatsAppTop();
-    });
-  </script>
-</body>
-</html>
+We need to correct this code block: The backtick string has quotes. Let's continue generating corrected code.
+
+We must ensure code is valid JS.
+
+We will rebuild renderProducts string building carefully. Let's write full script content.
+
